<resources>
    <string name="app_name">Shift Cttl IS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="default_web_client_id">[422242288564-8883h6bllbqmvavqfclv9jqd7vmjdd57.apps.googleusercontent.com]</string>

    <string-array name="options_array">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>
        <string-array name="tab_titles">
            <item>About the Test</item>
            <item>About the Client</item>
            <item>Findings</item>
        </string-array>

    <string name="previous">Previous</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scroll">scroll</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_scroll_np">scrollNP</string>
    <string name="sin_in">Sin In</string>
    <string name="sing_up">Sing up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="upkeep">upkeep</string>
    <string name="create_a_report">Create a report</string>
    <string name="new_find">New find</string>
    <string name="carrier">Carrier</string>
    <string name="sub_topic">Sub-topic</string>
    <string name="description">Description</string>
    <string name="remark">Remark</string>
    <string name="adding_standard_contrast">Adding standard contrast</string>
    <string name="add_a_price_recommendation">Add a price recommendation</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_images">Select images</string>
    <string name="take_pictures">Take pictures</string>
    <string name="about_the_test">About the test</string>
    <string name="name_checker">Name checker</string>
    <string name="name_of_the_contractor">Name of the contractor</string>
    <string name="present_at_the_time_of_the_examination">Present at the time of the examination</string>
    <string name="select_a_project_image">Select a project image</string>
    <string name="edit_topic">Edit topic</string>
    <string name="subject_name">Subject name</string>
    <string name="for_example_living_room">For example: living room</string>
    <string name="update">Update</string>
    <string name="price_recommendation_update">Price recommendation update</string>
    <string name="amount">Amount</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="unit_type">Unit type</string>
    <string name="total_price">Total price</string>
    <string name="select_a_time">Select a time</string>
    <string name="create_a_new_topic">Create a new topic</string>
    <string name="save">Save</string>
    <string name="price_recommendation">Price recommendation</string>
    <string name="standard_number">Standard number</string>
    <string name="findings_management">Findings management</string>
    <string name="adding_a_finding">Adding a finding</string>
    <string name="about_the_guest">About the guest</string>
    <string name="name_of_the_person_ordering">Name of the person ordering</string>
    <string name="last_name_of_the_inviter">Last name of the inviter</string>
    <string name="ordering_party_s_phone_number">Ordering party\'s phone number</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="building_number">Building number</string>
    <string name="apartment_number">Apartment number</string>
    <string name="more_information">More information</string>
    <string name="image_description">Image description</string>
    <string name="home">Home</string>
    <string name="logIn">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="approval">Approval</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="findings">Findings</string>
    <string name="living_room">Living-room</string>
    <string name="kitchen">Kitchen</string>
    <string name="hallway">Hallway</string>
    <string name="balcony">Balcony</string>
    <string name="toilet">Toilet</string>
    <string name="shower">Shower</string>
    <string name="bedroom">Bedroom</string>
    <string name="pool">Pool</string>
    <string name="closet">Closet</string>
    <string name="laundry_room">Laundry Room</string>
    <string name="flooring">Flooring</string>
    <string name="door">Door</string>
    <string name="window">Window</string>
    <string name="display_cabinet">Display Cabinet</string>
    <string name="cabinet">Cabinet</string>
    <string name="lamp">Lamp</string>
    <string name="kitchen_cabinet_doors">Cabinet Doors</string>
    <string name="upper_cabinets">Upper Cabinets</string>
    <string name="lower_cabinets">Lower Cabinets</string>
    <string name="sink">Sink</string>
    <string name="countertop">Countertop</string>
    <string name="standard_number_text">Standard Number: %1$s</string>
    <string name="filling_out_the_report_details">Filling out the report</string>

</resources>