<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#CC282828"
            app:cardCornerRadius="24dp"
            app:cardElevation="30dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_recommendation"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="#e0e0e0"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/input_background"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="#e0e0e0"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/amountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/input_background"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:inputType="numberSigned"

                    android:layout_marginBottom="12dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_per_unit"
                    android:textColor="#e0e0e0"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/unitPriceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/input_background"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:inputType="numberDecimal|numberSigned"
                    android:layout_marginBottom="12dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_type"
                    android:inputType="numberDecimal|numberSigned"

                    android:textColor="#e0e0e0"
                    android:textStyle="bold"/>



                <Spinner
                    android:id="@+id/unitSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/options_array"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:textColor="#e0e0e0"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/totalPriceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/input_background"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:inputType="numberDecimal|numberSigned"
                    android:layout_marginBottom="12dp"/>







            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_height="35dp"
            android:text="@string/save"
            android:background="@drawable/button_background"
            android:textColor="#ffffff"
            android:layout_marginBottom="12dp"/>
    </LinearLayout>
</ScrollView>
