<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#CC282828"
            app:cardCornerRadius="24dp"
            app:cardElevation="30dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adding_standard_contrast"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard_number"
                    android:textColor="#e0e0e0"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/standardEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/input_background"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"/>



                <!-- כפתורי בחירת/צילום תמונות -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="12dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSelectImage"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="6dp"
                        android:text="@string/select_images"
                        android:textAllCaps="false"
                        android:background="@drawable/button_background"
                        android:textColor="#ffffff" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCaptureImage"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:layout_marginStart="6dp"
                        android:text="@string/take_pictures"
                        android:textAllCaps="false"
                        android:background="@drawable/button_background"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <!-- RecyclerView גלילה אופקית לתמונות שנבחרו -->
                <!-- RecyclerView גלילה אופקית לתמונות שנבחרו -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewImages"
                    android:layout_width="match_parent"
                    android:layout_height="215dp"
                    android:clipToPadding="false"
                    android:scrollbars="vertical"
                    android:padding="4dp"
                    android:visibility="gone"/> <!-- ✅ מוסתר כברירת מחדל -->

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:textColor="#ffffff"
            android:layout_marginBottom="12dp"/>
    </LinearLayout>
</ScrollView>
